--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
   width: 100%;
 }
 
+/* ----------------------------------header------------------------------------ */
 #header {
   display: flex;
   text-align: center;
@@ -85,7 +86,6 @@ body {
   background: #e3e6f3;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
   z-index: 999;
-  /* sticky効かない */
   position: sticky;
   top: 0;
   left: 0;
@@ -127,6 +127,7 @@ body {
   left: 20px;
 }
 
+/* ----------------カートアイコン、クローズバーの非表示 ------------------------*/
 #mobile {
   display: none;
   align-items: center;
@@ -136,6 +137,7 @@ body {
   display: none;
 }
 
+/* -------------------------トップ画面--------------------------------------- */
 #hero {
   background-image: url("img/hero4.png");
   height: 90vh;
@@ -146,7 +148,6 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  /* display flex is by default in row so we have to set column */
   flex-direction: column;
 }
 
@@ -168,6 +169,7 @@ body {
   font-size: 15px;
 }
 
+/* ----------------------------------Featured Products------------------------------------- */
 #feature {
   display: flex;
   align-items: center;
@@ -179,7 +181,6 @@ body {
   width: 180px;
   text-align: center;
   padding: 25px 15px;
-  /* rgba(x,y,radius,color) */
   box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
   border: 1px #cce7d0 solid;
   border-radius: 4px;
@@ -190,7 +191,6 @@ body {
   box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
 }
 
-/* responsive */
 #feature .fe-box img {
   width: 100%;
   margin-bottom: 10px;
@@ -292,8 +292,8 @@ body {
   right: 20px;
 }
 
+/* ------------------------------banner----------------------------------------- */
 #banner {
-  /* なんでdisplay-jsutify-contentの３ついるの？なくても表示同じ */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -413,6 +413,7 @@ body {
   font-size: 15px;
 }
 
+/* --------------------------------newsletter banner---------------------------- */
 #newsletter {
   display: flex;
   justify-content: space-between;
@@ -464,6 +465,7 @@ body {
   border-bottom-left-radius: 0;
 }
 
+/* ------------------------footer---------------------------------- */
 footer {
   display: flex;
   justify-content: space-between;
@@ -524,6 +526,101 @@ footer .copyright {
   text-align: center;
 }
 
+/* ********************************Shop page********************************** */
+#page-header {
+  background-image: url(img/banner/b1.jpg);
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 14px;
+}
+
+#page-header h2,
+#page-header p {
+  color: white;
+}
+
+#pagination {
+  text-align: center;
+}
+
+#pagination a {
+  text-decoration: none;
+  background-color: #088178;
+  padding: 15px 20px;
+  border-radius: 4px;
+  color: white;
+  font-weight: 600;
+}
+
+#pagination a i {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+/* ******************************single products ******************************/
+
+#prodetails {
+  display: flex;
+  margin-top: 10px;
+}
+
+#prodetails .single-pro-image {
+  width: 40%;
+  margin-right: 50px;
+}
+
+.small-img-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.small-img-column {
+  flex-basis: 24%;
+  cursor: pointer;
+}
+
+#prodetails .single-pro-details {
+  width: 50%;
+  padding-top: 30px;
+}
+
+#prodetails .single-pro-details h4 {
+  padding: 40px 0 20px 0;
+}
+#prodetails .single-pro-details h2 {
+  font-size: 26px;
+}
+#prodetails .single-pro-details select {
+  display: block;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+}
+#prodetails .single-pro-details input {
+  width: 50px;
+  height: 47px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+#prodetails .single-pro-details button {
+  background-color: #088178;
+  color: white;
+}
+
+#prodetails .single-pro-details input:focus {
+  outline: none;
+}
+
+#prodetails .single-pro-details span {
+  line-height: 25px;
+}
+
 /* ------------------------responsive for iPad---------------------------- */
 @media (max-width: 799px) {
   .section-p1 {
@@ -564,7 +661,6 @@ footer .copyright {
   }
 
   #close {
-    /* why absolute take it to top */
     position: absolute;
     display: initial;
     top: 30px;
@@ -675,5 +771,19 @@ footer .copyright {
   }
   footer .copyright {
     text-align: start;
+  }
+  /* *********************single product******************** */
+  #prodetails {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #prodetails .single-pro-image {
+    width: 100%;
+    margin-right: 0px;
+  }
+
+  #prodetails .single-pro-details {
+    width: 100%;
   }
 }
